--- a/charts/lightrag-server/templates/deployment.yaml
+++ b/charts/lightrag-server/templates/deployment.yaml
@@ -42,27 +42,27 @@ spec:
           image: {{ .Values.cnpg.cluster.imageName }}
           env:
             # PSQL config
-            - name: POSTGRES_HOST
+            - name: PGHOST
               valueFrom:
                 secretKeyRef:
                   key: host
                   name: {{ default $.Release.Name $.Values.nameOverride }}-cnpg-app
-            - name: POSTGRES_PORT
+            - name: PGPORT
               valueFrom:
                 secretKeyRef:
                   key: port
                   name: {{ default $.Release.Name $.Values.nameOverride }}-cnpg-app
-            - name: POSTGRES_USER
+            - name: PGUSER
               valueFrom:
                 secretKeyRef:
                   key: username
-                  name: {{ default $.Release.Name $.Values.nameOverride }}-cnpg-app
+                  name: {{ default $.Release.Name $.Values.nameOverride }}-cnpg-superuser
             - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
                   key: password
-                  name: {{ default $.Release.Name $.Values.nameOverride }}-cnpg-app
-            - name: POSTGRES_DATABASE
+                  name: {{ default $.Release.Name $.Values.nameOverride }}-cnpg-superuser
+            - name: PGDATABASE
               valueFrom:
                 secretKeyRef:
                   key: dbname
@@ -70,14 +70,14 @@ spec:
           command: ['/usr/bin/bash','-c']
           args:
             - |
-              until /usr/bin/psql -h "$POSTGRES_HOST" -U "$POSTGRES_USER" -d "$POSTGRES_DATABASE" -c '\q'; do
+              until /usr/bin/psql -h "$PGHOST" -U "$PGUSER" -d "$PGDATABASE" -c '\q'; do
                 echo "Waiting for database...";
                 sleep 2;
               done;
-              EXT_EXISTS=$(/usr/bin/psql -h "$POSTGRES_HOST" -U "$POSTGRES_USER" -d "$POSTGRES_DATABASE" -tAc "SELECT 1 FROM pg_extension WHERE extname='vector';")
+              EXT_EXISTS=$(/usr/bin/psql -h "$PGHOST" -U "$PGUSER" -d "$PGDATABASE" -tAc "SELECT 1 FROM pg_extension WHERE extname='vector';")
               if [ "$EXT_EXISTS" != "1" ]; then
                 echo "Creating vector extension...";
-                /usr/bin/psql -h "$POSTGRES_HOST" -U "$POSTGRES_USER" -d "$POSTGRES_DATABASE" -c "CREATE EXTENSION vector;";
+                /usr/bin/psql -h "$PGHOST" -U "$PGUSER" -d "$PGDATABASE" -c "CREATE EXTENSION vector;";
               else
                 echo "Vector extension already enabled.";
               fi
