debug: use static password as chart re-generates on sync

--- a/charts/lightrag-server/values.yaml
+++ b/charts/lightrag-server/values.yaml
@@ -109,5 +109,7 @@ cnpg:
 neo4j:
   enabled: true
   usePasswordFiles: false
+  auth:
+    password: 'everyone-check-fish-kind-language'
   service:
     type: ClusterIP
