fix: redis defaulted with a password, set to static

--- a/charts/lightrag-server/values.yaml
+++ b/charts/lightrag-server/values.yaml
@@ -64,6 +64,7 @@ redis:
     resourcesPreset: medium
   auth:
     sentinel: false
+    password: 'everyone-check-fish-kind-language'
 
 cnpg:
   # -- Enable preconfigured cloudnative-pg psql configuration
