--- a/charts/lightrag-server/templates/deployment.yaml
+++ b/charts/lightrag-server/templates/deployment.yaml
@@ -143,8 +143,13 @@ spec:
                   key: password
 
             # Redis Config
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: redis-password
+                  name: {{ default $.Release.Name $.Values.nameOverride }}-redis
             - name: REDIS_URI
-              value: redis://{{ default $.Release.Name $.Values.nameOverride }}-redis-master:6379
+              value: redis://default:$(REDIS_PASSWORD)@{{ default $.Release.Name $.Values.nameOverride }}-redis-master:6379
 
             # PSQL config
             - name: POSTGRES_HOST
