--- a/charts/lightrag-server/templates/deployment.yaml
+++ b/charts/lightrag-server/templates/deployment.yaml
@@ -84,6 +84,7 @@ spec:
       containers:
         - image: {{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}
           name: lightrag-server
+          command: ['/usr/local/bin/python', '-m', 'lightrag.api.run_with_gunicorn']
           ports:
             - name: 'http'
               containerPort: 9621
