refactor: rename from mayastor-diskpools to mayastor-manual, may have other resources

--- a/charts/mayastor-manual/templates/diskpool.yaml
+++ b/charts/mayastor-manual/templates/diskpool.yaml
@@ -1,4 +1,4 @@
-{{- range $nodeName, $configData := .Values.config }}
+{{- range $nodeName, $configData := .Values.diskpools }}
 {{- if ne $configData.enabled false }}
 ---
 apiVersion: openebs.io/v1beta3
