--- a/charts/mayastor-manual/templates/storageclass.yaml
+++ b/charts/mayastor-manual/templates/storageclass.yaml
@@ -9,6 +9,9 @@ provisioner: io.openebs.csi-mayastor
 reclaimPolicy: {{ default "Delete" $configData.reclaimPolicy }}
 volumeBindingMode: {{ default "WaitForFirstConsumer" $configData.volumeBindingMode }}
 parameters:
+  fsType: {{ default "ext4" }}
+  thin: {{ (default false $configData.thin) }}
+  allowVolumeExpansion: {{ (default true $configData.allowVolumeExpansion) }}
   protocol: {{ default "nvmf" $configData.protocol }}
   repl: {{ (default "3" $configData.repl) | quote }}
 {{- end }}
