feat: ease user overwrite of ollama image

--- a/charts/argo-examples-onyx/templates/ollama.yml
+++ b/charts/argo-examples-onyx/templates/ollama.yml
@@ -26,6 +26,9 @@ spec:
 {{- if $appConfig.helmConfig }}
 {{ toYaml $appConfig.helmConfig | indent 8 }}
 {{- else }}
+{{- if $appConfig.image }}
+        image: {{ toYaml $appConfig.image | nindent 10 }}
+{{- end }}
         ollama:
           gpu:
             enabled: true
