--- a/charts/argo-examples-operators/templates/argo-cd.yml
+++ b/charts/argo-examples-operators/templates/argo-cd.yml
@@ -77,6 +77,18 @@ spec:
           autoscaling:
             enabled: true
             minReplicas: 2
+          {{- if $appConfig.repoServer.config.volumes }}
+          volumes: {{ toYaml $appConfig.repoServer.config.volumes | nindent 12 }}
+          {{- end }}
+          {{- if $appConfig.repoServer.config.volumeMounts }}
+          volumeMounts: {{ toYaml $appConfig.repoServer.config.volumeMounts | nindent 12 }}
+          {{- end }}
+          {{- if $appConfig.repoServer.config.env }}
+          env: {{ toYaml $appConfig.repoServer.config.env | nindent 12 }}
+          {{- end }}
+          {{- if $appConfig.repoServer.config.initContainers }}
+          initContainers: {{ toYaml $appConfig.repoServer.config.initContainers | nindent 12 }}
+          {{- end }}
         server:
           autoscaling:
             enabled: true
