fix: default to bitnamilegacy docker org for redis

--- a/charts/lightrag-server/values.yaml
+++ b/charts/lightrag-server/values.yaml
@@ -58,6 +58,8 @@ deployment:
 redis:
   # -- Enable preconfigured redis configuration
   enabled: true
+  image:
+    repository: bitnamilegacy/redis
   architecture: standalone # TODO Couldn't get sentinel to work
   master:
     revisionHistoryLimit: 2
