feat(02-01): add global.variant toggle and image structure
- Move variant from root to global.variant (onyx/onyx-foss/custom)
- Add global.imageRegistry for air-gapped deployments
- Add global.imagePullSecrets for private registries
- Document that onyx and onyx-foss use same images (EE requires licensing)

feat(02-01): add variant enum validation to schema

- Move variant from root to global.variant with enum validation
- Add enum constraint: [onyx, onyx-foss, custom]
- Add imageRegistry string property for air-gapped deployments
- Add imagePullSecrets array property for private registries
- Remove deprecated root-level variant property

feat(02-01): add variant validation and image repository helpers

- Add onyx-ai.validateVariant helper with fail on invalid variant
- Add onyx-ai.imageRepository helper with registry prefix logic
- Support component mapping: backend, web-server, model-server, code-interpreter
- Custom variant requires explicit repository override
- Infrastructure for Phase 6 deployment wiring

--- a/charts/onyx-ai/values.yaml
+++ b/charts/onyx-ai/values.yaml
@@ -13,12 +13,15 @@
 # Convenience Chart Values (onyx-ai specific)
 # ------------------------------------------------------------------------------
 
-# Variant selection - affects container images in later phases
-# Options: "onyx" (default) or "onyx-foss"
-variant: "onyx"
-
 # Global values accessible to all charts
 global:
+  # Variant: onyx (default), onyx-foss (explicit FOSS intent), or custom (manual image config)
+  # Note: onyx and onyx-foss use same onyxdotapp/* images; EE features require separate licensing
+  variant: "onyx"
+  # Registry prefix for air-gapped deployments (e.g., "my-registry.example.com/mirror")
+  imageRegistry: ""
+  # Pull secrets for private registries
+  imagePullSecrets: []
   # Storage class for persistent volumes (empty = use cluster default)
   storageClass: ""
 
